--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,30 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="danger">
     <ion-title>
-      Contact
+      Contato
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header>Me siga nas redes sociais! </ion-list-header>
     <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      <ion-icon name="logo-twitter" color="blue"></ion-icon>
+      @vem_ca_macho
+      <br>
+      <br>
+      <ion-icon name="logo-facebook" color="blue"></ion-icon>
+      /camachozor
+      <br>
+      <br>
+      <ion-icon name="logo-instagram" color="blue"></ion-icon>
+      @lucascamach0
+      <br>
+      <br>
+      <ion-icon name="logo-linkedin" color="blue"></ion-icon>
+      /lucas-akio-camacho-411192a1/
     </ion-item>
+    <img src="resources/cupido.png"/>
   </ion-list>
 </ion-content>
